# pinecone-local-sandbox-starter

./: Makefile  README.md  pyproject.toml
config/: main.py
scripts/: dev_manager_end_local_dev.py  dev_manager_start_local_env.py
